# StyleGAN-pytorch-lightning

./: .gitignore  LICENSE  README.md  pyproject.toml
bash/: train.sh
configs/: config.yaml
notebooks/: test_custom_layers.ipynb
scripts/: train.py
src/: bash.sh  callbacks.py  config.yaml  custom_layers.py  data.py  gan.py  losses.py  models.py  networks.py  train.py  utils.py
src/code/: __init__.py  custom_blocks.py  custom_callbacks.py  custom_layers.py  data.py  gan.py  losses.py  models.py  networks.py  utils.py
src/configs/: config.yaml
src/stylegan/: custom_blocks.py  custom_callbacks.py  custom_layers.py  data.py  gan.py  losses.py  models.py  networks.py  utils.py
