[tool.poetry]
name = "StyleGAN"
version = "0.0.1"
description = "Pytorch Lightning Implementation of StyleGAN"
authors = ["haceneterbouche <hacene@powder.gg>"]
license = "MIT License"
packages = [
    { include = "stylegan", from="src"},
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1" # +cu113
torchvision = "^0.9.1" # +cu113
torchaudio = "^0.8.1"
#pytorch-lightning = {version = "1.5.8", extras = ["extra"]}
pytorch-lightning = "^1.5.8"
comet-ml = "^3.24.1"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
jsonargparse = {extras = ["signatures"], version = "^4.1.2"}


[tool.poetry.dev-dependencies]
black = "^21.12b0"
pre-commit = "^2.16.0"
ipykernel = "^6.6.1"
poethepoet = "^0.10.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.1+cu113 torchvision==0.11.2+cu113 torchaudio==0.10.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Black formatter configuration
line-length = 89
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.sublime-workspace
  | .idea
  | .venv
  | .vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''